@@ -6,19 +6,19 @@
 
 COM_PLUGINS_CONFIGURATION=Plug-in Manager Options
 
-PLUGN_MANAGER_PLUGINS=Plugins Manager: Plugins
-PLUGN_MANAGER_PLUGIN=Plugins Manager: Plugin
+PLUGN_MANAGER_PLUGINS=Plug-in Manager: Plug-ins
+PLUGN_MANAGER_PLUGIN=Plug-in Manager: Plug-in
 
 PLUGN_OPTION_FOLDER=- Select Type -
-PLUGN_SEARCH_IN_TITLE=Search in plugin title.
+PLUGN_SEARCH_IN_TITLE=Search in plug-in title.
 
 PLUGN_ELEMENT_HEADING=Element
 PLUGN_FOLDER_HEADING=Type
-PLUGN_NAME_HEADING=Plugin Name
+PLUGN_NAME_HEADING=Plug-in Name
 
-PLUGN_FIELD_NAME_DESC=Plugin Name Desc
-PLUGN_FIELD_NAME_LABEL=Plugin Name
+PLUGN_FIELD_NAME_DESC=Plug-in Name Desc
+PLUGN_FIELD_NAME_LABEL=Plug-in Name
 PLUGN_FIELD_ELEMENT_DESC=Field Element Desc
-PLUGN_FIELD_ELEMENT_LABEL=Plugin File
+PLUGN_FIELD_ELEMENT_LABEL=Plug-in File
 PLUGN_FIELD_FOLDER_DESC=Field Folder Desc
-PLUGN_FIELD_FOLDER_LABEL=Plugin Type
+PLUGN_FIELD_FOLDER_LABEL=Plug-in Type
