@@ -7,13 +7,13 @@
 COM_REDIRECT_CONFIGURATION=Redirect Manager Options
 
 REDIR_MANAGER_LINKS=Redirect Manager: Links
-REDIR_PLUGIN_DISABLED=Link redirection plugin is disabled
-REDIR_PLUGIN_ENABLED=Link redirection plugin is enabled
+REDIR_PLUGIN_DISABLED=The Redirect Plug-in is disabled. Enable it in the Plug-in Manager.
+REDIR_PLUGIN_ENABLED=The Redirect Plug-in is enabled.
 REDIR_SEARCH_LINKS=Search in link fields.
 
 REDIR_HEADING_CREATED_DATE=Created Date
 REDIR_HEADING_NEW_URL=New URL
-REDIR_HEADING_OLD_URL=Old URL
+REDIR_HEADING_OLD_URL=Expired URL
 REDIR_HEADING_REFERRER=Referring Page
 
 REDIR_HEADING_UPDATE_LINKS=Update selected links to the following new URL
