@@ -45,7 +45,7 @@ MOD_MENU_EXTENSIONS_EXTENSIONS=Extensions
 MOD_MENU_EXTENSIONS_EXTENSION_MANAGER=Extension Manager
 MOD_MENU_EXTENSIONS_LANGUAGE_MANAGER=Language Manager
 MOD_MENU_EXTENSIONS_MODULE_MANAGER=Module Manager
-MOD_MENU_EXTENSIONS_PLUGIN_MANAGER=Plugin Manager
+MOD_MENU_EXTENSIONS_PLUGIN_MANAGER=Plug-in Manager
 MOD_MENU_EXTENSIONS_TEMPLATE_MANAGER=Template Manager
 
 MOD_MENU_TOOLS=Tools
